crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_140_Jaleco140_Mississippi_Satsujin_Jiken_Japan_Rev_A_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-140-Jaleco140/Mississippi Satsujin Jiken (Japan) (Rev A).zip
rom_sha256=8b5a6252e3acde34f194e0fd09cd3000b3f58b2b0a6bcd258c262d3f37365bb4
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=0746c7e698afcabd
checkpoint f900 fb_fnv1a64=ec010873cb91f6a7
checkpoint f1100 fb_fnv1a64=fb754f29ca3927c7
