crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_141_m141_Rockball_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-141-m141/Rockball (Sachen) [!].nes
rom_sha256=18a95a605b47042e943ad7080f1f30b8cacbf6769dd06d3ff5c9dabffa04b411
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=af82cca5af2b34e7
checkpoint f900 fb_fnv1a64=9407a4ad5246f995
checkpoint f1100 fb_fnv1a64=5752b4aee7bcb476
