crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_143_SachenTCA01_Dancing_Blocks_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-143-SachenTCA01/Dancing Blocks (Sachen) [!].nes
rom_sha256=5b6a30143854bcb3f56a017abbc2bdf73127eaf18282efdc2a5520eea676d926
frames=1141
fb_bytes=245760
cycles=37902150
audio_samples=1005322
audio_fnv1a64=d8edbf9d6d779b76
checkpoint f900 fb_fnv1a64=209346ea961a4f69
checkpoint f1100 fb_fnv1a64=209346ea961a4f69
