crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_143_SachenTCA01_Magic_Mathematic_Sachen_NTSC.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-143-SachenTCA01/Magic Mathematic (Sachen-NTSC) [!].nes
rom_sha256=5c700e8d7a10e2a2784ff8adce41edaae7d298e3b27976671120c1e3cd44fb2e
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=b965b916c231033b
checkpoint f900 fb_fnv1a64=4e5b46322ae3545c
checkpoint f1100 fb_fnv1a64=9c20047157a90d10
