crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_145_SachenSA72007_Sidewinder_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-145-SachenSA72007/Sidewinder (Sachen) [!].nes
rom_sha256=5fa377e10a14c04d159b0c82fd42bb8e89e16682d668d31e4b06b10b040f863a
frames=1141
fb_bytes=245760
cycles=37902152
audio_samples=1005322
audio_fnv1a64=78f13f4e5f67ecdc
checkpoint f900 fb_fnv1a64=0f4621ab7eba76c4
checkpoint f1100 fb_fnv1a64=c7dd8587d052fb10
